--- a/template/template.html
+++ b/template/template.html
@@ -10,7 +10,7 @@
     
     <!--our css link-->
     <link rel="stylesheet" href="../common.css">  
-    <link rel="stylesheet" href="forum.css">   
+    <link rel="stylesheet" href="../forum/forum.css">   
 </head>
 
 <body>
@@ -27,8 +27,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navMain">
             <ul class="navbar-nav ms-auto gap-lg-2">
-                <li class="nav-item"><a class="nav-link" href="../main/index.html">MAIN</a></li>
-                <li class="nav-item"><a class="nav-link active" href="../forum/forum.html">FORUM</a></li>
+                <li class="nav-item"><a class="nav-link active" href="../main/index.html">MAIN</a></li>
+                <li class="nav-item"><a class="nav-link " href="../forum/forum.html">FORUM</a></li>
                 <li class="nav-item"><a class="nav-link" href="../resource/resource.html">RESOURCE</a></li>
                 <li class="nav-item"><a class="nav-link" href="../profile/profile.html">PROFILE</a></li>
                 <li class="nav-item ms-lg-3"><a class="btn btn-accent" href="../index.html">LOG OUT</a></li>
