--- a/template/template.html
+++ b/template/template.html
@@ -31,7 +31,7 @@
                 <li class="nav-item"><a class="nav-link " href="../forum/forum.html">FORUM</a></li>
                 <li class="nav-item"><a class="nav-link" href="../resource/resource.html">RESOURCE</a></li>
                 <li class="nav-item"><a class="nav-link" href="../profile/profile.html">PROFILE</a></li>
-                <li class="nav-item ms-lg-3"><a class="btn btn-accent" href="../index.html">LOG OUT</a></li>
+                <li class="nav-item ms-lg-3"><a class="btn btn-accent" href="../index.html">SIGN OUT</a></li>
             </ul>
             </div>
         </div>
